--- a/config/cloudinary.yml
+++ b/config/cloudinary.yml
@@ -1,11 +1,11 @@
 development:
-  cloud_name: gharpe-development
+  cloud_name: dqpmb2hfb
   api_key: '472589347797696'
   api_secret: Q6U5HLVpEuoj9x_MeCaqtp6vl3c
   enhance_image_tag: true
   static_image_support: false
 production:
-  cloud_name: gharpe
+  cloud_name: dqpmb2hfb
   api_key: '472589347797696'
   api_secret: Q6U5HLVpEuoj9x_MeCaqtp6vl3c
   enhance_image_tag: true
